<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_item_name"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text=""
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_item_engine"
                android:textAppearance="?attr/textAppearanceListItem"
                android:layout_marginStart="@dimen/dimen_30"
                />

            <TextView
                android:id="@+id/tv_item_engine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text=""
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@android:color/holo_blue_dark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_item_address"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tv_item_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text=""
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@android:color/holo_blue_dark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_item_interior"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tv_item_interior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text=""
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@android:color/holo_blue_dark"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_item_exterior"
                android:textAppearance="?attr/textAppearanceListItem"

                />

            <TextView
                android:id="@+id/tv_item_exterior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text=""
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@android:color/holo_blue_dark"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_item_vin"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tv_item_vin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text=""
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_item_fuel"
                android:textAppearance="?attr/textAppearanceListItem"
                android:layout_marginStart="@dimen/dimen_30"
                />

            <TextView
                android:id="@+id/tv_item_fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text=""
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@android:color/holo_blue_dark"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
